refactor: Menu를 JPA 기반으로 리펙토링