@@ -1,23 +1,21 @@
 package kitchenpos.application;
 
-import static kitchenpos.fixture.MenuFixture.메뉴_생성;
-import static kitchenpos.fixture.MenuProductFixture.메뉴_상품_생성;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 import kitchenpos.config.ServiceTest;
 import kitchenpos.dao.MenuDao;
 import kitchenpos.dao.MenuGroupDao;
-import kitchenpos.dao.MenuProductDao;
 import kitchenpos.dao.ProductDao;
 import kitchenpos.domain.Menu;
 import kitchenpos.domain.MenuGroup;
 import kitchenpos.domain.MenuProduct;
 import kitchenpos.domain.Product;
+import kitchenpos.ui.dto.request.CreateMenuProductRequest;
+import kitchenpos.ui.dto.request.CreateMenuRequest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
@@ -34,9 +32,6 @@ class MenuServiceTest {
     ProductDao productDao;
 
     @Autowired
-    MenuProductDao menuProductDao;
-
-    @Autowired
     MenuDao menuDao;
 
     @Autowired
@@ -47,15 +42,18 @@ class MenuServiceTest {
         // given
         final MenuGroup persistMenuGroup = menuGroupDao.save(new MenuGroup("메뉴 그룹"));
         final Product persistProduct = productDao.save(new Product("상품", BigDecimal.TEN));
-        final MenuProduct menuProduct = 메뉴_상품_생성(persistProduct.getId());
-        final Menu menu = 메뉴_생성(persistMenuGroup.getId(), Arrays.asList(menuProduct));
+        final CreateMenuRequest request = new CreateMenuRequest(
+                "메뉴",
+                BigDecimal.TEN,
+                persistMenuGroup.getId(),
+                List.of(new CreateMenuProductRequest(persistProduct.getId(), 1L)));
 
         // when
-        final Menu actual = menuService.create(menu);
+        final Menu actual = menuService.create(request);
 
         assertAll(
                 () -> assertThat(actual.getId()).isPositive(),
-                () -> assertThat(actual.getName()).isEqualTo(menu.getName())
+                () -> assertThat(actual.getName()).isEqualTo(request.getName())
         );
     }
 
@@ -65,16 +63,14 @@ class MenuServiceTest {
         // given
         final MenuGroup persistMenuGroup = menuGroupDao.save(new MenuGroup("메뉴 그룹"));
         final Product persistProduct = productDao.save(new Product("상품", BigDecimal.TEN));
-        final MenuProduct menuProduct = 메뉴_상품_생성(persistProduct.getId());
-        final Menu invalidMenu = 메뉴_생성(
-                persistMenuGroup.getId(),
-                Arrays.asList(menuProduct),
+        final CreateMenuRequest invalidRequest = new CreateMenuRequest(
+                "메뉴",
                 new BigDecimal(invalidPrice),
-                "메뉴"
-        );
+                persistMenuGroup.getId(),
+                List.of(new CreateMenuProductRequest(persistProduct.getId(), 1L)));
 
         // when & then
-        assertThatThrownBy(() -> menuService.create(invalidMenu))
+        assertThatThrownBy(() -> menuService.create(invalidRequest))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -83,16 +79,14 @@ class MenuServiceTest {
         // given
         final MenuGroup persistMenuGroup = menuGroupDao.save(new MenuGroup("메뉴 그룹"));
         final Product persistProduct = productDao.save(new Product("상품", BigDecimal.TEN));
-        final MenuProduct menuProduct = 메뉴_상품_생성(persistProduct.getId());
-        final Menu invalidMenu = 메뉴_생성(
-                persistMenuGroup.getId(),
-                Arrays.asList(menuProduct),
+        final CreateMenuRequest invalidRequest = new CreateMenuRequest(
+                "메뉴",
                 null,
-                "메뉴"
-        );
+                persistMenuGroup.getId(),
+                List.of(new CreateMenuProductRequest(persistProduct.getId(), 1L)));
 
         // when & then
-        assertThatThrownBy(() -> menuService.create(invalidMenu))
+        assertThatThrownBy(() -> menuService.create(invalidRequest))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -100,32 +94,14 @@ class MenuServiceTest {
     void create_메서드는_menu의_menuGroupId가_존재하지_않는다면_예외가_발생한다() {
         // given
         final Product persistProduct = productDao.save(new Product("상품", BigDecimal.TEN));
-        final Menu invalidMenu = 메뉴_생성(
-                -999L,
-                Arrays.asList(메뉴_상품_생성(persistProduct.getId())),
+        final CreateMenuRequest invalidRequest = new CreateMenuRequest(
+                "메뉴",
                 BigDecimal.TEN,
-                "메뉴"
-        );
+                -999L,
+                List.of(new CreateMenuProductRequest(persistProduct.getId(), 1L)));
 
         // when & then
-        assertThatThrownBy(() -> menuService.create(invalidMenu))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
-
-    @Test
-    void create_메서드는_menu의_menuPrice가_존재하지_않는다면_예외가_발생한다() {
-        // given
-        final MenuGroup persistMenuGroup = menuGroupDao.save(new MenuGroup("메뉴 그룹"));
-        final Product persistProduct = productDao.save(new Product("상품", BigDecimal.TEN));
-        final Menu invalidMenu = 메뉴_생성(
-                persistMenuGroup.getId(),
-                Arrays.asList(메뉴_상품_생성(persistProduct.getId())),
-                null,
-                "메뉴"
-        );
-
-        // when & then
-        assertThatThrownBy(() -> menuService.create(invalidMenu))
+        assertThatThrownBy(() -> menuService.create(invalidRequest))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -134,9 +110,9 @@ class MenuServiceTest {
         // given
         final MenuGroup persistMenuGroup = menuGroupDao.save(new MenuGroup("메뉴 그룹"));
         final Product persistProduct = productDao.save(new Product("상품", BigDecimal.TEN));
-        final Menu expected = menuDao.save(
-                메뉴_생성(persistMenuGroup.getId(), Arrays.asList(메뉴_상품_생성(persistProduct.getId())))
-        );
+        final MenuProduct menuProduct = new MenuProduct(persistProduct, 1);
+        final Menu menu = Menu.of("메뉴", BigDecimal.TEN, List.of(menuProduct), persistMenuGroup);
+        final Menu expected = menuDao.save(menu);
 
         // when
         final List<Menu> actual = menuService.list();
